Linked & applied font, fixed resulting position shifts on page

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -9,11 +9,12 @@
 body {
     background-color: wheat;
     margin: 0 auto;
+    font-family: 'Indie Flower', cursive;
 }
 
 main {
-    padding-top: 45px;
-    margin: 0 5px;
+    padding-top: 50px;
+    margin: 0 5px 5px;
 }
 
 nav {
@@ -66,6 +67,7 @@ input {
     background-color: transparent;
     width: 100%;
     margin-left: 5px;
+    font-family: 'Indie Flower', cursive;
 }
 
 input.done {
